--- a/01ejemplo/css/style.css
+++ b/01ejemplo/css/style.css
@@ -16,7 +16,7 @@ html, body{
 
  
 
-.main-container{
+.container{
     border: 4px solid rgb(255, 0, 84);
     border-radius: 50px;
     margin: 2rem;
